kubernetes/doc-to-html-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: doc-to-html
  name: doc-to-html
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doc-to-html
  strategy: {}
  template:
    metadata:
      labels:
        app: doc-to-html
    spec:
      containers:
      - image: tbsacr.azurecr.io/doc-to-html:latest
        imagePullPolicy: Always
        name: doc-to-html
        resources: 
          limits:
            cpu: 2000m
            memory: 4Gi
          requests:
            cpu: 500m
            memory: 512Mi
