kubernetes/doc-to-html-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doc-to-html-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - doc-to-html.tbs.alpha.canada.ca
    secretName: doc-to-html-tls-secret-prod
  rules:
  - host: doc-to-html.tbs.alpha.canada.ca
    http:
      paths:
      - backend:
          service:
            name: doc-to-html
            port:
              number: 8080
        path: /
        pathType: Prefix
